# prompt-launcher

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
app-tauri/: Cargo.toml  tauri.conf.json
app-tauri/icons/: icon.icns
app-tauri/src/: commands.rs  lib.rs  main.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs  prompt.rs
crates/app-core/tests/: prompt.rs
crates/macos-shim/: Cargo.toml
crates/macos-shim/src/: focus.rs  lib.rs  paste.rs
crates/macos-shim/tests/: smoke.rs
crates/prompt-store/: Cargo.toml
crates/prompt-store/src/: fs_store.rs  lib.rs  parser.rs
crates/prompt-store/tests/: fs_store.rs
crates/search/: Cargo.toml
crates/search/examples/: smoke.rs
crates/search/src/: engine.rs  hit.rs  lib.rs  recency.rs
crates/search/tests/: search.rs
docs/: DESIGN.md  tailwind.theme.json  tokens.json
docs/agent-prompts/: phase-4-claude-code.md
docs/design/: README.md  overlay-reference.html
docs/plans/: v1.md
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: main.ts  style.css
