[workspace]
members = ["app-tauri", "crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.83"
license = "MIT"
authors = ["shidil <shidil@live.com>"]
repository = "https://github.com/shidil/prompt-launcher"

[workspace.dependencies]
# Pinned in Phase 1+ as crates are introduced. Empty in Phase 0.
