[package]
name = "prompt-launcher"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "prompt_launcher_lib"
path = "src/lib.rs"

[[bin]]
name = "prompt-launcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
app-core = { path = "../crates/app-core" }
prompt-store = { path = "../crates/prompt-store" }
search = { path = "../crates/search" }
directories = "5"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
