[package]
name = "macos-shim"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication", "NSApplication", "libc"] }
objc2-foundation = "0.2"
enigo = "0.2"
arboard = "3"
tracing = "0.1"
anyhow = "1"
