[package]
name = "prompt-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
app-core = { path = "../app-core" }
gray_matter = "0.3"
walkdir = "2"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
