[package]
name = "search"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
app-core = { path = "../app-core" }
nucleo-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# prompt-store + anyhow + dirs are only needed by examples/smoke.rs.
# Keeping them out of prod deps so downstream consumers don't pull in the
# fs/notify stack (prompt-store) or anyhow when using the search lib alone.
prompt-store = { path = "../prompt-store" }
anyhow = "1"
dirs = "5"
